--- a/vsl.html
+++ b/vsl.html
@@ -59,7 +59,7 @@
                     <p style="color: #fff; font-size: 15px; font-weight: 200; padding-left: 10px; font-family: Oswald;">¡ASEGÚRATE DE QUE TU SONIDO ESTÉ ENCENDIDO!</p>
                 </div>
                 <div id="botao1" style="text-align: center; margin: 25px;">
-                    <button class="btn"><a href="#">¡QUIERO ACCESO A LA APLICACIÓN!</a></button>
+                    <button class="btn"><a href="https://pay.hotmart.com/T73403396X?checkoutMode=10">¡QUIERO ACCESO A LA APLICACIÓN!</a></button>
                 </div>
         </div>
         <div class="noise"></div>
@@ -77,7 +77,7 @@
                     <div style="padding:56.25% 0 0 0;position:relative; margin: 10px;"><iframe src="https://player.vimeo.com/video/735911572?h=9d2863b04f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="recomendación3"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
                 </div>
                 <div style="text-align: center; margin: 25px;">
-                    <button class="btn"><a href="#">¡QUIERO ACCESO A LA APLICACIÓN!</a></button>
+                    <button class="btn"><a href="https://pay.hotmart.com/T73403396X?checkoutMode=10">¡QUIERO ACCESO A LA APLICACIÓN!</a></button>
                 </div>
             </div>
         </section>
@@ -133,7 +133,7 @@
                     <h2>por solo<br><h1 style="font-size: 50px; color: #fff;">$27</h1></h2>
                     <h2>La aplicación + Vários Bonos</h2>
                     <div style="text-align: center; margin: 25px;">
-                        <button class="btn"><a href="#">¡QUIERO ACCESO A LA APLICACIÓN!</a></button>
+                        <button class="btn"><a href="https://pay.hotmart.com/T73403396X?checkoutMode=10">¡QUIERO ACCESO A LA APLICACIÓN!</a></button>
                     </div>
                     <p>Una vez que asegure su lugar, tendrá acceso inmediato.</p>
                 </div>
@@ -155,7 +155,7 @@
                     <h2>por solo<br><h1 style="font-size: 50px; color: #fff;">$27</h1></h2>
                     <h2>La aplicación + Vários Bonos</h2>
                     <div style="text-align: center; margin: 25px;">
-                        <button class="btn"><a href="#">¡QUIERO ACCESO A LA APLICACIÓN!</a></button>
+                        <button class="btn"><a href="https://pay.hotmart.com/T73403396X?checkoutMode=10">¡QUIERO ACCESO A LA APLICACIÓN!</a></button>
                     </div>
                     <p>Una vez que asegure su lugar, tendrá acceso inmediato.</p>
                     <p style="padding: 50px;"></p>
