--- a/backredirect.html
+++ b/backredirect.html
@@ -68,7 +68,7 @@
                 <div style="padding:56.25% 0 0 0;position:relative; margin: 10px;"><iframe src="https://player.vimeo.com/video/735911572?h=9d2863b04f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="recomendación3"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </div>
             <div style="text-align: center; margin: 25px;">
-                <button class="btn"><a href="https://pay.hotmart.com/T73403396X?checkoutMode=10">QUIERO GANAR VIENDO VIDEOS</a></button>
+                <button class="btn"><a href="https://pay.hotmart.com/T73403396X?off=p0kb90qw&checkoutMode=10">QUIERO GANAR VIENDO VIDEOS</a></button>
             </div>
         </div>
     </section>
@@ -82,7 +82,7 @@
 
     <section style="text-align: center; background-color: #000; padding: 25px;">
         <div>
-            <button class="btn"><a href="https://pay.hotmart.com/T73403396X?checkoutMode=10">QUIERO GANAR VIENDO VIDEOS</a></button>
+            <button class="btn"><a href="https://pay.hotmart.com/T73403396X?off=p0kb90qw&checkoutMode=10">QUIERO GANAR VIENDO VIDEOS</a></button>
         </div>
         <p style="padding: 50px;"></p>
     </section>
