--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p style="color: #fff; text-align: center;"">¡HAGA CLIC EN EL BOTÓN DE ABAJO PARA CONTINUAR!</p>
         <p style="padding: 10px;"></p>
         <div style="text-align: center; margin: 25px;">
-            <button class="btn"><a href="/vsl">¡QUIERO VER EL VIDEO EXPLICATIVO!</a></button>
+            <a class="btn" href="/vsl">¡QUIERO VER EL VIDEO EXPLICATIVO!</a>
         </div>
     </section>
 
